# predictor2

./: CMakeLists.txt  README.md  configure  in.vim
config/: vim.cmake
data/: input.csv  input.original.csv  input_clean.csv  input_clean_data_fill.csv
src/: CMakeLists.txt
src/predictor/: CART.hpp  CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.hpp  functions.cpp  functions.hpp
src/predictor/test/: CMakeLists.txt  predictortest.cpp
